--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.ProfileActivity"
+            android:parentActivityName=".ui.MainActivity"
             android:label="@string/title_activity_profile">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
